[package]
name = "azul-docs"
version = "0.0.5"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MIT"
description = "Builds the azul documentation for azul.rs"
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user-interface", "svg", "graphics"]
categories = ["gui"]
repository = "https://github.com/fschutt/azul"
readme = "../README.md"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
serde_derive = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false, features = ["std"] }
anyhow = "1.0"
indexmap = { version = "1.9", features = ["serde"] } # For ordered maps
cargo-license = { version = "0.6.1" }
cargo_metadata = "0.18.1"
zip = "5.0.0"
open = "5.3.2"
tempfile = "3.19.1"
comrak = { version = "0.37.0", features = ["syntect"] }
azul-layout = { version = "0.0.5", path = "../layout", default-features = false, features = ["std", "xml", "text_layout", "font_loading", "cpurender"]}
azul-core = { version = "0.0.5", path = "../core", default-features = false, features = ["std"]}
azul-css = { version = "0.0.5", path = "../css", default-features = false, features = ["parser"]}
chrono = "0.4.40"
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
base64 = "0.22.1"
serde_yaml = "0.9"
# For source code parsing and analysis (from gem project)
syn = { version = "2.0.101", features = ["parsing", "full", "visit", "printing"] }
quote = "1.0.40"
ignore = "0.4.23"
regex = "1.11.1"
cargo_toml = "0.22.1"
proc-macro2 = { version = "1.0.81", features = ["span-locations"] }
toml = "0.8.22"
rayon = "1.10"
walkdir = "2"
thiserror = "1.0"
bincode = { version = "2.0.1", features = ["serde"] }
once_cell = "1.20"
