[package]
name = "azul-examples"
version = "0.0.1"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MIT"
description = '''
    Azul GUI is a free, functional, immediate-mode GUI framework
    for rapid development of desktop applications written in Rust,
    supported by the Mozilla WebRender rendering engine
'''
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user-interface", "svg", "graphics" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2018"

[[bin]]
name = "public"
path = "rust/public.rs"

[[bin]]
name = "table"
path = "rust/table.rs"

[dependencies]
azul = { version = "0.0.1", path = "../api/rust" }
azul-widgets = { version = "0.0.2", path = "../azul-widgets" }
# libc_alloc = { version = "1.0.2", default-features = false }
