[package]
name = "azul-examples"
version = "0.0.1"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MIT"
description = '''
    Azul GUI is a free, functional, immediate-mode GUI framework
    for rapid development of desktop applications written in Rust,
    supported by the Mozilla WebRender rendering engine
'''
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user-interface", "svg", "graphics" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2018"

[[bin]]
name = "xml"
path = "rust/xml.rs"

[[bin]]
name = "issue"
path = "rust/issue.rs"

[[bin]]
name = "table"
path = "rust/table.rs"

[[bin]]
name = "async"
path = "rust/async.rs"

[[bin]]
name = "hello-world"
path = "rust/hello-world.rs"

[[bin]]
name = "widgets"
path = "rust/widgets.rs"

[[bin]]
name = "opengl"
path = "rust/opengl.rs"

[dependencies]
azul = { version = "0.0.1", path = "../api/rust" }
azul-widgets = { version = "0.0.2", path = "../azul-widgets" }
# libc_alloc = { version = "1.0.2", default-features = false }
